# task_data_tracking

./: Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/api/: .coverage  app.py  config.py
app/api/models/: models.py
app/api/tests/: __init__.py  test_item.py
app/api/views/: __init__.py
app/api/views/item/: __init__.py  create_or_update_item.py
app/sql/: init_app.sql
config_files/config/: entrypoint.sh  init.sql
dockerfiles/backend/: Dockerfile
dockerfiles/frontend/: Dockerfile
nginx/: docker.conf
