[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
(
  /(
    | \.git
    | \.idea
  )/
)
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "data_tracking"
version = "0.0.0"
description = ""
authors = ["Maciej Parol"]

[tool.poetry.dependencies]
python = "^3.9"
bump2version = "^1.0.1"
fastapi = "^0.65.1"
importlib-metadata = "^4.0.1"
loguru = "^0.5.3"
psycopg2-binary = "2.8.6"
requests = "==2.25.1"
sqlalchemy = "1.4.15"
sqlalchemy-get-or-create = "^0.1.5"
uvicorn = {extras = ["standard"], version = "0.13.4"}


[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
isort = "^5.8.0"
pylint = "^2.8.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
]
